--- a/University_frontend/University_frontend/University_frontend/Views/GradeListView.xaml
+++ b/University_frontend/University_frontend/University_frontend/Views/GradeListView.xaml
@@ -38,12 +38,14 @@
                                     <ColumnDefinition Width="*"></ColumnDefinition>
                                     <ColumnDefinition Width="*"></ColumnDefinition>
                                     <ColumnDefinition Width="*"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
 
                                 <Label Grid.Row="0" Grid.Column="0" Text="{Binding Id}" />
                                 <Label Grid.Row="0" Grid.Column="1" Text="{Binding StudentName}" />
                                 <Label Grid.Row="0" Grid.Column="2" Text="{Binding TeacherName}" />
-                                <Label Grid.Row="0" Grid.Column="3" Text="{Binding GradeValue}" />
+                                <Label Grid.Row="0" Grid.Column="3" Text="{Binding SubjectName}" />
+                                <Label Grid.Row="0" Grid.Column="4" Text="{Binding GradeValue}" />
 
                             </Grid>
                         </ViewCell>
